# ocr-tools

./: .gitignore  LICENSE  README.md  app.py  lock_dependencies.sh  mac_install.sh  mac_open.sh  pyproject.toml  requirements.txt
pages/: batching_page.py  convert_pdf_to_image.py  tool_page.py  via_page.py
recognizer/: __init__.py  constants.py  output.py  recognizer.py  smart_batcher.py
src/ocr_tools/via/: __init__.py  converter.py  via.py  via_template.json
